--- a/challenges/04-challenge-ignite/package.json
+++ b/challenges/04-challenge-ignite/package.json
@@ -44,13 +44,6 @@
     ]
   },
   "devDependencies": {
-    "@types/react": "^17.0.27",
-    "@types/react-dom": "^17.0.9",
-    "@types/react-modal": "^3.12.1",
-    "@types/react-router-dom": "^5.3.1",
-    "@types/styled-components": "^5.1.14",
-    "json-server": "^0.16.3",
-    "typescript": "^4.4.3"
-  },
-  "typings": "./src/typings/global.d.ts"
+    "json-server": "^0.16.3"
+  }
 }
