--- a/ignite-lab/rockethelp/package.json
+++ b/ignite-lab/rockethelp/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "@expo-google-fonts/roboto": "^0.2.2",
-    "expo": "~41.0.1",
+    "expo": "^45.0.6",
     "expo-font": "~9.1.0",
     "expo-splash-screen": "~0.10.2",
     "expo-updates": "~0.5.4",
@@ -17,7 +17,7 @@
     "phosphor-react-native": "^1.1.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-native": "~0.63.4",
+    "react-native": "~0.68.2",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-reanimated": "~2.1.0",
     "react-native-safe-area-context": "3.2.0",
