--- a/ignite-lab/rockethelp/package.json
+++ b/ignite-lab/rockethelp/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "@expo-google-fonts/roboto": "^0.2.2",
+    "@react-navigation/native": "^6.0.11",
+    "@react-navigation/native-stack": "^6.7.0",
     "expo": "^45.0.6",
     "expo-font": "~9.1.0",
     "expo-splash-screen": "~0.10.2",
@@ -20,8 +22,8 @@
     "react-native": "~0.68.2",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-reanimated": "~2.1.0",
-    "react-native-safe-area-context": "3.2.0",
-    "react-native-screens": "~3.0.0",
+    "react-native-safe-area-context": "4.2.4",
+    "react-native-screens": "~3.11.1",
     "react-native-svg": "12.1.0",
     "react-native-unimodules": "~0.13.3",
     "react-native-web": "~0.13.12"
