feat: typescript to modal

--- a/challenges/04-challenge-ignite/package.json
+++ b/challenges/04-challenge-ignite/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.1.10",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
+    "@types/react-modal": "^3.13.1",
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.25",
     "@unform/core": "^2.1.6",
