--- a/node/node-init/package.json
+++ b/node/node-init/package.json
@@ -7,11 +7,11 @@
     "dev": "ts-node-dev --transpile-only --ignore-watch node_modules src/index.ts"
   },
   "dependencies": {
-    "@types/express": "^4.17.13",
-    "express": "^4.18.1",
-    "ts-node-dev": "^2.0.0"
+    "express": "^4.18.1"
   },
   "devDependencies": {
+    "ts-node-dev": "^2.0.0",
+    "@types/express": "^4.17.13",
     "prettier": "^2.7.1",
     "typescript": "^4.7.4"
   }
