feat: adding implemetention to the server

--- a/next-level-week/nlw-esports/server/tsconfig.json
+++ b/next-level-week/nlw-esports/server/tsconfig.json
@@ -11,11 +11,11 @@
     "baseUrl": ".",
     // "noUnusedLocals": true,
     // "noUnusedParameters": true,
-    // "paths": {
-    //   "@database/*": ["./src/database/*"],
-    //   "@services/*": ["./src/services/*"],
-    //   "@utils/*": ["./src/utils/*"]
-    // }
+    "paths": {
+      "@database/*": ["./src/database/*"],
+      "@services/*": ["./src/services/*"],
+      "@utils/*": ["./src/utils/*"]
+    }
   },
   "exclude": ["node_modules", "src/**.spec.ts"]
 }
