--- a/next-level-week/nlw-esports/server/package.json
+++ b/next-level-week/nlw-esports/server/package.json
@@ -6,13 +6,18 @@
   "license": "MIT",
   "private": false,
   "scripts": {
-    "dev": "ts-node-dev --transpile-only --ignore-watch node_modules src/index.ts"
+    "dev": "tsnd --exit-child --transpile-only --ignore-watch node_modules -r tsconfig-paths/register src/index.ts"
   },
   "dependencies": {
-    "express": "^4.18.1"
+    "@prisma/client": "4.3.1",
+    "cors": "^2.8.5",
+    "express": "^4.18.1",
+    "tsconfig-paths": "^4.1.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "prisma": "^4.3.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.8.3"
   }
