--- a/ignite/node/finApi/package.json
+++ b/ignite/node/finApi/package.json
@@ -7,12 +7,14 @@
     "dev": "ts-node-dev --transpile-only --ignore-watch node_modules src/index.ts"
   },
   "dependencies": {
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "ts-node-dev": "^2.0.0",
     "@types/express": "^4.17.13",
+    "@types/uuid": "^9.0.0",
     "prettier": "^2.7.1",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.4"
   }
 }
