--- a/ignite/node/carRentApi/.prettierrc.json
+++ b/ignite/node/carRentApi/.prettierrc.json
@@ -1,5 +1,6 @@
 {
-  "semicolons": true,
   "tabWidth": 2,
-  "jsxSingleQuote": true
+  "jsxSingleQuote": true,
+  "singleQuote": true,
+  "semi": true
 }
