--- a/ignite/node/carRentApi/.vscode/launch.json
+++ b/ignite/node/carRentApi/.vscode/launch.json
@@ -8,9 +8,7 @@
       "type": "node",
       "request": "attach",
       "name": "Launch Program",
-      "skipFiles": [
-        "<node_internals>/**"
-      ],
+      "skipFiles": ["<node_internals>/**"]
     }
   ]
 }
