--- a/ignite/node/carRentApi/package.json
+++ b/ignite/node/carRentApi/package.json
@@ -15,6 +15,7 @@
     "uuid": "^9.0.0"
   },
   "scripts": {
+    "format": "prettier --write \"**/*.{ts,js,tsx,jsx,json}\"",
     "dev": "tsnd --inspect --transpile-only --ignore-watch node_modules --respawn src/server.ts"
   }
 }
