--- a/ignite/node/carRentApi/package.json
+++ b/ignite/node/carRentApi/package.json
@@ -5,13 +5,19 @@
   "license": "MIT",
   "devDependencies": {
     "@types/express": "^4.17.16",
+    "@types/multer": "^1.4.7",
     "@types/uuid": "^9.0.0",
     "prettier": "^2.8.3",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.5"
   },
   "dependencies": {
+    "@types/csv-parse": "^1.2.2",
+    "@types/swagger-ui-express": "^4.1.3",
+    "csv-parse": "^5.3.4",
     "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1",
+    "swagger-ui-express": "^4.6.0",
     "uuid": "^9.0.0"
   },
   "scripts": {
