--- a/ignite/node/carRentApi/tsconfig.json
+++ b/ignite/node/carRentApi/tsconfig.json
@@ -6,6 +6,9 @@
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "skipLibCheck": true,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true
   }
+
 }
