feat: adding entities and migrations

--- a/ignite/node/carRentApi/package.json
+++ b/ignite/node/carRentApi/package.json
@@ -25,6 +25,7 @@
   },
   "scripts": {
     "format": "prettier --write \"**/*.{ts,js,tsx,jsx,json}\"",
-    "dev": "tsnd --inspect --transpile-only --ignore-watch node_modules --respawn src/server.ts"
+    "dev": "tsnd --inspect --transpile-only --ignore-watch node_modules --respawn src/server.ts",
+    "typeorm": "tsnd ./node_modules/typeorm/cli"
   }
 }
