--- a/next-level-week/nlw-spacetime/server/package.json
+++ b/next-level-week/nlw-spacetime/server/package.json
@@ -1,22 +1,28 @@
 {
-    "name": "server",
-    "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
-    "scripts": {
-        "dev": "tsx watch src/server.ts",
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
-    "dependencies": {
-        "@prisma/client": "^4.14.0",
-        "fastify": "^4.17.0"
-    },
-    "devDependencies": {
-        "prisma": "^4.14.0",
-        "tsx": "^3.12.7",
-        "typescript": "^5.0.4"
-    }
+  "name": "server",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "dev": "tsx watch src/server.ts",
+    "test:dev": "jest --watch",
+    "test": "jest"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "@fastify/cors": "^8.2.1",
+    "@prisma/client": "^4.14.0",
+    "fastify": "^4.17.0",
+    "jest": "^29.5.0",
+    "zod": "^3.21.4"
+  },
+  "devDependencies": {
+    "@jest/globals": "^29.5.0",
+    "prisma": "^4.14.0",
+    "ts-jest": "^29.1.0",
+    "tsx": "^3.12.7",
+    "typescript": "^5.0.4"
+  }
 }
