--- a/next-level-week/nlw-spacetime/server/package.json
+++ b/next-level-week/nlw-spacetime/server/package.json
@@ -13,13 +13,16 @@
   "license": "ISC",
   "dependencies": {
     "@fastify/cors": "^8.2.1",
+    "@fastify/jwt": "^6.7.1",
     "@prisma/client": "^4.14.0",
+    "axios": "^1.4.0",
     "fastify": "^4.17.0",
     "jest": "^29.5.0",
     "zod": "^3.21.4"
   },
   "devDependencies": {
     "@jest/globals": "^29.5.0",
+    "dotenv": "^16.0.3",
     "prisma": "^4.14.0",
     "ts-jest": "^29.1.0",
     "tsx": "^3.12.7",
