--- a/next-level-week/nlw-spacetime/mobile/app.json
+++ b/next-level-week/nlw-spacetime/mobile/app.json
@@ -7,6 +7,9 @@
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "scheme": "nlwspacetime",
+    "web": {
+        "bundler": "metro"
+    },
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
