--- a/next-level-week/nlw-spacetime/mobile/package.json
+++ b/next-level-week/nlw-spacetime/mobile/package.json
@@ -19,6 +19,7 @@
     "expo-constants": "~14.2.1",
     "expo-crypto": "~12.2.1",
     "expo-font": "~11.1.1",
+    "expo-image-picker": "~14.1.1",
     "expo-linking": "~4.0.1",
     "expo-router": "^1.5.3",
     "expo-secure-store": "~12.1.1",
